<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCCM</string>
    <string name="action_settings">Settings</string>
    <string name="lbNome">Nome:</string>
    <string name="lbIntervalo">Intervalo de uso do medicamento:</string>
    <string name="lbHoraUltima">Hora da última dose:</string>
    <string name="lbHora">Hora</string>
    <string name="lbMinuto">Minuto</string>
    <string name="lbQuantidade">Quantidade em estoque:</string>
    <string name="btnPro">Próximo</string>
    <string name="btnCancel">Cancelar</string>
	<string name="btnVoltar">Voltar</string>
	<string name="btnSalvar">Salvar</string>
	<string name="btnCadastrar">Cadastrar</string>
	<string name="btnEstoque">Estoque</string>
	<string name="btnSobre">Sobre</string>
	<string name="btnSair">Sair</string>
	<string name="btnExcluir">Excluir</string>
	<string name="btnEditar">Editar</string>
	<string name="btnTomei">Tomei!</string>
	<string name="btnTomar">Tomar!</string>
	
    
</resources>
